--- a/web/p010_kc85.md
+++ b/web/p010_kc85.md
@@ -6,7 +6,7 @@ title: The KC85
 ## The KC85 Computer Series
 
 The KC85 was a series of 8-bit computers built in Eastern
-Germany from the mid-80's until the fall of the Iron Curtain in 1989. 
+Germany during the 1980's.
  
 KC means 'Kleincomputer' or 'Small Computer', this was an umbrella name
 for 6 different computer models with partially very different hardware 
@@ -20,47 +20,65 @@ and were incompatible with the KC85/2-based mainline
 - **KC Compact**: this was a Amstrad CPC clone from Mühlhausen and came out too
 late to make any impact
 
-Following, I will concentrate on the computers spawned by the HC-900: the
-KC85/2, KC85/3 and KC85/4.
+The KC85/2 and its successors were the most interesting, because they had 
+a fairly unique hardware and operating system design, detailed below.
+From here on, the name 'KC85' will be used for the KC85/2, /3 and /4 line
+of computers only.
 
 (TODO: photos)
 
 ### Hardware Specs
 
-All computers of the KC85/2 line had a U880 CPU (an 'unlicensed' Z80 clone),
-running at 1.75MHz (KC85/2 and /3) or 1.77MHz (KC85/4). There were no 
-custom chips for video and audio (so more like a ZX Spectrum than a C64).
+All computers of the KC85/2 line were based on the U880 CPU 
+(an 'unlicensed' Z80 clone) running at 1.75 MHz or 1.77 MHz and didn't
+feature any custom chips for video or audio. The closest western 8-bit
+homecomputer was probably the ZX Spectrum, which also didn't have custom
+chips, had a similar video memory organisation, but was running twice as
+fast at 3.5 MHz.
 
-All models could display 320x256 pixels at 16 foreground and 8 background
-colors, but with a limited color resolution: the KC85/2 and KC85/3 could 
-only assign one foreground and one background color to a block of 8x4 pixels,
-this was improved in the KC85/4 to 8x1 pixels (again, this handling of
-color information is quite similar to the ZX Spectrum).
+All KC85 models could display 320x256 pixels at 16 foreground and 8 background
+colors, but with limited color resolution: a block of 8x4 pixels could be 
+assigned one foreground and one background color.
 
-The different models differed most in their RAM configuration:
+The color resolution was greatly improved in the KC85/4 to 8x1 pixels. 
 
-- **KC85/2**: 16KByte general RAM, 16KByte video RAM, 4 KByte ROM 
-- **KC85/3**: some RAM config as KC85/2, but the operating system ROM was increased 
-to 8 KByte, and a built-in 8KByte BASIC ROM was added
-- **KC85/4**: the 85/4 was a memory monster, it had 64 KByte general RAM, 64 KByte
-video RAM (2 16-KByte pages for pixels, and 2 16-KByte pages for colors) and
-20 KByte ROM (8+4 KByte operating system, and 8 KByte BASIC)
+The KC85 models differed most in their RAM configuration:
 
-The KC85/4 has much improved video capabilities due to its massive 64 KByte
+- **KC85/2**: 
+    - 16 KByte system RAM
+    - 16 KByte video RAM
+    - 4 KByte operating system ROM
+- **KC85/3**: same RAM config as KC85/2 but
+more ROM and a built-in BASIC interpreter:
+    - 16 KByte system RAM
+    - 16 KByte video RAM
+    - 8 KByte BASIC ROM
+    - 8 KByte OS ROM
+- **KC85/4**: the 85/4 was a true memory monster with 128 KByte RAM:
+    - 64 KByte general RAM divided into 4 16-KByte banks 
+    - 64 KByte of video memory: 2 16-KByte banks for pixel data,
+      and 2 16-KByte banks for color data
+    - 8 KByte BASIC ROM
+    - the operating system consisted of an 8 KByte ROM
+      and a separate 4 KByte chunk 'behind' the BASIC ROM which was
+      paged-in as needed
+
+The KC85/4 had much improved video capabilities due to its massive 64 KByte
 video RAM divided into 4 independent memory banks:
 
 - the color resolution was improved to 8x1 pixels
-- the CPU could write to 'hidden' memory banks, making true double-buffering
-possible
+- the CPU could write to 'hidden' memory banks while another bank was 
+displayed, making true double-buffering possible
 - a special high-color mode allowed to assign per-pixel colors, but only
 with 4 different colors
 - the video memory layout was 90 degrees rotated (writing to continuous 
-addresses in video memory would fill vertical columns on screen), this
+addresses in video memory would fill vertical 8-pixel columns on screen), this
 greatly simplified video memory addressing and common tasks like vertical
 scrolling
 
 The video-scanout was not programmable in any way though, so fancy scrolling 
-tricks were not possible, all rendering had to be done 'manually' with the CPU.
+tricks were not possible, all rendering had to be done 'manually' through 
+the CPU.
 
 
 ### Modular Hardware and Software
@@ -68,12 +86,12 @@ tricks were not possible, all rendering had to be done 'manually' with the CPU.
 The KC85/2 based series has a fairly unique modular hardware and software
 concept. On the hardware side, the base device offered 2 slots for expansion
 modules, and additional slots could be added by stacking 'bus-driver' devices
-on top of the base device, each adding 4 more slots. Theoretically, up to 4
-MByte RAM could be added through expansion slots (although I think in practice
-this was impossible because the signals would become too weak and noisy).
+on top of the base device, each adding 4 more slots. Up to 4MByte RAM could 
+be managed with this system, but as far as I know this could not be achieved
+in reality because of signal degradation or timing problems.
 
 The most popular expansion modules were 16 and 64 KByte RAM modules, 
-ROM modules for BASIC, FORTH and assembly development (each only 8 Kbyte big), 
+ROM modules for BASIC, FORTH and assembler development (each only 8 Kbyte big), 
 serial and parallel interface modules, and 'pass-through' modules for hobbyists to
 interface with their hardware.
 
