More webpage updates

--- a/web/p010_kc85.md
+++ b/web/p010_kc85.md
@@ -13,15 +13,15 @@ for 6 different computer models with partially very different hardware
 designs and from 2 different manufacturers:
 
 - **KC85/2 (originally HC-900), KC85/3, KC85/4**: this is the KC 'main-line' built 
-by the 'VEB Mikroelektronikkombinat Mühlhausen'
+by the VEB Mikroelektronikkombinat Mühlhausen
 - **KC85/1 (originally Z9001), KC87**: the Z9001 and its successor the KC87
-were built by 'Robotron Dresden', they had a different hardware architecture
+were built by Robotron Dresden, they had a different hardware architecture
 and were incompatible with the KC85/2-based mainline
 - **KC Compact**: this was a Amstrad CPC clone from Mühlhausen and came out too
 late to make any impact
 
-The KC85/2 and its successors were the most interesting, because they had 
-a fairly unique hardware and operating system design, detailed below.
+The KC85/2 and its successors were the most interesting machines, because they had 
+a unique hardware and operating system design, detailed below.
 From here on, the name 'KC85' will be used for the KC85/2, /3 and /4 line
 of computers only.
 
@@ -31,7 +31,7 @@ of computers only.
 
 All computers of the KC85/2 line were based on the U880 CPU 
 (an 'unlicensed' Z80 clone) running at 1.75 MHz or 1.77 MHz and didn't
-feature any custom chips for video or audio. The closest western 8-bit
+have any custom chips for video or audio. The closest western 8-bit
 homecomputer was probably the ZX Spectrum, which also didn't have custom
 chips, had a similar video memory organisation, but was running twice as
 fast at 3.5 MHz.
@@ -101,13 +101,13 @@ in mind. All shell commands of the operating system had a specific
 header in memory (2 bytes '7F 7F', followed by the command name, followed by 
 a 01, followed by the machine code to execute). User-written programs could
 expose their functionality through such standardized command headers. The 
-operating system could build the list of available commands by scanning the
-RAM for the magic '7F 7F' headers.
+operating system would find available commands by scanning the
+memory for the magic '7F 7F' headers.
 
 This expansibility on the hardware and software side allowed for a very 
 nice working environment, it was possible to switch between different
 development environments like BASIC and FORTH by bank-switching their ROM-
 modules in and out, or one could extend existing development environments
-by adding custom-commands to them.
+by adding custom-commands.
 
 
