--- a/web/p010_kc85.md
+++ b/web/p010_kc85.md
@@ -17,7 +17,7 @@ by the VEB Mikroelektronikkombinat Mühlhausen
 - **KC85/1 (originally Z9001), KC87**: the Z9001 and its successor the KC87
 were built by Robotron Dresden, they had a different hardware architecture
 and were incompatible with the KC85/2-based mainline
-- **KC Compact**: this was a Amstrad CPC clone from Mühlhausen and came out too
+- **KC Compact**: this was an Amstrad CPC clone from Mühlhausen and came out too
 late to make any impact
 
 The KC85/2 and its successors were the most interesting machines, because they had 
