Webpage updated, typo fixed in DisasmWindow title

--- a/web/p010_kc85.md
+++ b/web/p010_kc85.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: The KC85
+title: The KC85 Computers
 ---
 
 ## The KC85 Computer Series
@@ -25,7 +25,17 @@ a unique hardware and operating system design, detailed below.
 From here on, the name 'KC85' will be used for the KC85/2, /3 and /4 line
 of computers only.
 
-(TODO: photos)
+This is a KC85/3 at the Vintage Computing Festival with a fairly mysterious 
+floppy disk expansion prototype on top:
+
+![KC85/3 with floppy disk prototype](images/vintage_computing_festival_3.jpg)
+
+And at the same event, a KC85/4 with a breadboard expansion module and a
+thematically matching cassette tape recorder (the computer in the background
+is an Atari 800XL if I'm not mistaken):
+
+![KC85/4](images/vintage_computing_festival_4.jpg)
+<br><br>
 
 ### Hardware Specs
 
@@ -80,6 +90,10 @@ The video-scanout was not programmable in any way though, so fancy scrolling
 tricks were not possible, all rendering had to be done 'manually' through 
 the CPU.
 
+This is what my KC85/4 looks like when opened:
+
+![KC85/4 opened](images/kc85_4_inside.jpg)
+<br><br>
 
 ### Modular Hardware and Software
 
@@ -89,6 +103,19 @@ modules, and additional slots could be added by stacking 'bus-driver' devices
 on top of the base device, each adding 4 more slots. Up to 4MByte RAM could 
 be managed with this system, but as far as I know this could not be achieved
 in reality because of signal degradation or timing problems.
+
+This photo of an KC85/4 at a little forgotten computer-room at the HWT 
+Berlin Schoeneweide demonstrates the hardware-expansion concept pretty well:
+
+![Stacked KC85/4](images/hwt_schoeneweide.jpg)
+
+At the bottom is the KC85/4 base device (the actual computer), standing on it
+is a 'D002 Busdriver' with 4 expansion slots, above a 'D004 Floppy Disk Basis'
+device with it's own U880 CPU running at full 4MHz speed, followed by the
+actual 'D004 Floppy Disk Drive', up to 4 of thos drives those could be attached
+to one D004 Floppy Disk Basis device. The monitor is a Soviet black-and-white
+portable TV called Junost ('Youth'). This was the typical KC computer monitor
+because it was relatively cheap.
 
 The most popular expansion modules were 16 and 64 KByte RAM modules, 
 ROM modules for BASIC, FORTH and assembler development (each only 8 Kbyte big), 
