--- a/web/p010_kc85.md
+++ b/web/p010_kc85.md
@@ -104,7 +104,7 @@ on top of the base device, each adding 4 more slots. Up to 4MByte RAM could
 be managed with this system, but as far as I know this could not be achieved
 in reality because of signal degradation or timing problems.
 
-This photo of an KC85/4 at a little forgotten computer-room at the HWT 
+This photo of a KC85/4 at a little forgotten computer-room at the HWT 
 Berlin Schoeneweide demonstrates the hardware-expansion concept pretty well:
 
 ![Stacked KC85/4](images/hwt_schoeneweide.jpg)
