--- a/web/p010_kc85.md
+++ b/web/p010_kc85.md
@@ -112,7 +112,7 @@ Berlin Schoeneweide demonstrates the hardware-expansion concept pretty well:
 At the bottom is the KC85/4 base device (the actual computer), standing on it
 is a 'D002 Busdriver' with 4 expansion slots, above a 'D004 Floppy Disk Basis'
 device with it's own U880 CPU running at full 4MHz speed, followed by the
-actual 'D004 Floppy Disk Drive', up to 4 of thos drives those could be attached
+actual 'D004 Floppy Disk Drive', up to 4 of those drives those could be attached
 to one D004 Floppy Disk Basis device. The monitor is a Soviet black-and-white
 portable TV called Junost ('Youth'). This was the typical KC computer monitor
 because it was relatively cheap.
