Minor webpage fixes

--- a/web/p010_kc85.md
+++ b/web/p010_kc85.md
@@ -25,8 +25,8 @@ a unique hardware and operating system design, detailed below.
 From here on, the name 'KC85' will be used for the KC85/2, /3 and /4 line
 of computers only.
 
-This is a KC85/3 at the Vintage Computing Festival with a fairly mysterious 
-floppy disk expansion prototype on top:
+This is a KC85/3 at the Vintage Computing Festival 2015 in Berlin with a fairly
+mysterious floppy disk expansion prototype on top:
 
 ![KC85/3 with floppy disk prototype](images/vintage_computing_festival_3.jpg)
 
