Added texor and some KC85/4 demos

--- a/web/p010_kc85.md
+++ b/web/p010_kc85.md
@@ -55,12 +55,12 @@ The color resolution was greatly improved in the KC85/4 to 8x1 pixels.
 The KC85 models differed most in their RAM configuration:
 
 - **KC85/2**: 
-    - 16 KByte system RAM
+    - 16 KByte general RAM
     - 16 KByte video RAM
     - 4 KByte operating system ROM
 - **KC85/3**: same RAM config as KC85/2 but
 more ROM and a built-in BASIC interpreter:
-    - 16 KByte system RAM
+    - 16 KByte general RAM
     - 16 KByte video RAM
     - 8 KByte BASIC ROM
     - 8 KByte OS ROM
